# PythonPackageWS

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  src.rst  tests.rst
src/: random_generator.py
tests/: test_random_generator.py
