[tool.poetry]
name = "pythonpackagews"
version = "0.1.0"
description = "A simple python package for the workshop"
authors = ["pistrosi2810 <simon.pistrosch@tum.de>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
